# ren2024

./: README.ja.md  README.md  pyproject.toml
docs/: architecture.ja.md  architecture.md  cli.ja.md  cli.md  usecases.ja.md  usecases.md  visualization.ja.md  visualization.md
simulation/: Cargo.toml
simulation/examples/: mock_smoke.rs
simulation/src/: config.rs  lib.rs  llm.rs  main.rs  mechanisms.rs  metrics.rs  norm.rs  parse.rs  prompts.rs  reproduce.rs  reproduce_mock.rs  simulation.rs  world.rs
simulation/tests/: integration_test.rs
tools/: pyproject.toml
tools/src/crsec_tools/: __init__.py  cli.py  reproduce_paper.py  show_experiment_settings.py  visualize.py  visualize_sweep.py
