[project]
name = "crsec-tools"
version = "0.1.0"
description = "Ren et al. (2024) CRSEC — emergence of social norms in LLM-agent societies — visualization & analysis tools"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "networkx>=3.2",
]

[project.scripts]
crsec-tools = "crsec_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crsec_tools"]
