[project]
name = "crsec-tools"
version = "0.1.0"
description = "Ren et al. (2024) CRSEC — emergence of social norms in LLM-agent societies — visualization & analysis tools"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "networkx>=3.2",
    "socsim-tools",
]

[project.scripts]
crsec-tools = "crsec_tools.cli:main"

[tool.uv.sources]
socsim-tools = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", subdirectory = "tools/socsim_tools" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crsec_tools"]
